--- a/style.css
+++ b/style.css
@@ -75,6 +75,8 @@ p {
 
 .homepage {
 	text-align: center;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .homepage h2 {
@@ -85,6 +87,7 @@ p {
 	font-family: 'Quattrocento Sans', sans-serif;
 	text-transform: uppercase;
 	margin-bottom: 0px;
+	padding-top: 10px;
 }
 
 .homepage h3 {
@@ -105,4 +108,22 @@ p {
 	width: 160px;
 	border-top: 2px solid;
 	border-color: red;
+}
+
+.academylogo {
+	margin: 20px;
+}
+
+.homepage a {
+	color: red;
+}
+
+.homepage a:hover {
+	color: red;
+	text-decoration: none;
+	opacity: .8;
+}
+
+#get-envolved {
+	background-color: #f5f5f5;
 }
