--- a/style.css
+++ b/style.css
@@ -30,10 +30,6 @@ p {
 	margin-top: 30px;
 }
 
-.logopng {
-	margin: 70px;
-}
-
 .btn-lge {
 	font-size: 35px;
 	padding-left: 30px;
@@ -59,19 +55,14 @@ p {
 .navbar {
 	margin-left: auto;
 	margin-right: auto; 
-	padding: 13px 15%;
 }
 
+.logopng {
+	margin-top: 50px;
+}
 .display-3 {
 	padding-top: 20px;
 }
-
-/*@media (min-width: 768px) {
-.bd-placeholder-img-lg {
-          font-size: 3.5rem;
-	}
-}
-*/
 
 .homepage {
 	text-align: center;
@@ -81,7 +72,7 @@ p {
 
 .homepage h2 {
 	text-align: center;
-	color: red;
+	color: #f74c3c;
 	font-size: 2em;
 	font-weight: bold;
 	font-family: 'Quattrocento Sans', sans-serif;
@@ -115,15 +106,53 @@ p {
 }
 
 .homepage a {
-	color: red;
+	color: #f74c3c;
 }
 
 .homepage a:hover {
-	color: red;
+	color: #f74c3c;
 	text-decoration: none;
 	opacity: .8;
 }
 
 #get-envolved {
 	background-color: #f5f5f5;
+}
+
+footer {
+	padding-top: 50px;
+	padding-bottom: 30px;
+	background-color: #f74c3c;
+}
+
+.btn-danger{
+	background-color: #f74c3c;
+}
+
+.btn-light{
+	font-weight: bold;
+}
+
+@media (max-width: 768px) {
+.bd-placeholder-img-lg {
+          font-size: 3.5rem;
+	}
+h1 {
+	font-size: 2em;
+	text-align: left;
+	font-family: 'Orbitron', sans-serif;
+}
+
+#pngfooter {
+	width: 80%;
+}
+
+}
+
+@media (max-width: 1199px) {
+	.container {
+		margin-right: 0px;
+		margin-left: 0px;
+		max-width: 1200px;
+	}
 }
