--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ p {
 	text-align: center;
 	background-image: url(./first-website/images/hero_image.jpg);
 	color: white;
+	border-radius: 0px;
 }
 
 .bd-placeholder-img {
